Add more icons. Start adding monitoring of gained/lost land on border change.